--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
 
 <body>
   <header></header>
+  <!-- main-area -->
   <main class="main">
+    <!-- search-area -->
     <div class="search-field">
       <div class="search-box">
         <input id="input-field" class="search-field" type="text" />
@@ -30,13 +32,21 @@
       </div>
 
     </div>
-    <div id="details-area"></div>
+    <!-- search-area end-->
+
+
+
     <div class="row">
+
+      <!-- products-area -->
       <div class="col-md-9 col-lg-9 col-sm-7">
         <div id="all-products" class="">
 
         </div>
       </div>
+      <!-- products-area end-->
+
+      <!-- product-result-area -->
       <div class="col-md-3 col-lg-3 col-sm-5 cart-main">
         <div class="cart" id="my-cart">
           <table class="table">
@@ -86,8 +96,11 @@
           </div>
         </div>
       </div>
+      <!-- product-result-area -->
     </div>
+    <!-- products-area -->
   </main>
+  <!-- main-area -->
   <footer></footer>
 
   <!-- add javascript  file  -->
